--- a/index.html
+++ b/index.html
@@ -11,6 +11,44 @@
     <link rel="stylesheet" href="./build/css/app.css">
 </head>
 <body>
+    <header class="header contenedor">
+        <div class="header__grid">
+            <div class="header__logo">
+                <img src="./build/img/logo.svg" alt="Logo carolina Spa" title="Logo carolina Spa">
+            </div>
+            <nav class="sociales">
+                <a class="sociales__enlace" href="hhtps://facebook.com">
+                    <span class="sociales__accesible">Facebook </span>
+                </a>
+                <a class="sociales__enlace" href="hhtps://twitter.com">
+                    <span class="sociales__accesible">Twitter </span>
+                </a>
+                <a class="sociales__enlace" href="hhtps://instagram.com">
+                    <span class="sociales__accesible"> Instagram</span>
+                </a>
+                <a class="sociales__enlace" href="hhtps://pinterest.com">
+                    <span class="sociales__accesible">Pinterest </span>
+                </a>
+                <a class="sociales__enlace" href="hhtps://tiktok.com">
+                    <span class="sociales__accesible">Tiktok </span>
+                </a>
+                <a class="sociales__enlace" href="hhtps://youtube.com">
+                    <span class="sociales__accesible">YouTube </span>
+                </a>
+            </nav>
+        </div>
+    </header>
 
+    <div class="navegacion">
+        <div class="navegacion__border">
+            <nav class="navegacion__contenedor">
+                <a href="#" class="navegacion__enlace">Inicio</a>
+                <a href="#" class="navegacion__enlace">Nosotros</a>
+                <a href="#" class="navegacion__enlace">Servicios</a>
+                <a href="#" class="navegacion__enlace">Productos</a>
+                <a href="#" class="navegacion__enlace">Contacto</a>
+            </nav>
+        </div>
+    </div>
 </body>
 </html>
