--- a/index.html
+++ b/index.html
@@ -74,5 +74,69 @@
         <h1 class="bienvenida__heading">Bienvenido(a) a nuestro <span>sitio web</span></h1>
         <p class="bienvenida__texto">Te sentirás como nuevo con nuestros masajistas profesionales.</p>
     </section>
+
+    <section class="cards">
+        <div class="cards__grid contenedor">
+            <div class="card">
+                <picture>
+                <source
+                     srcset="./build/img/servicio_01.avif" 
+                     type="image/avif">
+                <source
+                     srcset="./build/img/servicio_01.webp" 
+                     type="image/webp">
+                <source
+                     srcset="./build/img/servicio_01.jpg" 
+                     type="image/jpeg">
+                <img loading="lazy" decoding="async" src="./build/img/servicio_01.jpg" lazyalt="imagen"  alt="Imagen Servicio" title="Imagen Servicio" class="card__imagen">
+                </picture>
+
+                <div class="card__contenido">
+                    <h2 class="card__heading">Conoce sobre <span>Nosotros</span></h2>
+                    <a href="#" class="card__enlace">Leer más</a>
+                </div>
+            </div> <!-- fin .card -->
+
+            <div class="card">
+                <picture>
+                <source
+                     srcset="./build/img/servicio_02.avif" 
+                     type="image/avif">
+                <source
+                     srcset="./build/img/servicio_02.webp" 
+                     type="image/webp">
+                <source
+                     srcset="./build/img/servicio_02.jpg" 
+                     type="image/jpeg">
+                <img loading="lazy" decoding="async" src="./build/img/servicio_02.jpg" lazyalt="imagen"  alt="Imagen Servicio" title="Imagen Servicio" class="card__imagen">
+                </picture>
+
+                <div class="card__contenido">
+                    <h2 class="card__heading">Nuestros <span>servicios</span></h2>
+                    <a href="#" class="card__enlace">Leer más</a>
+                </div>
+            </div> <!-- fin .card -->
+
+            <div class="card">
+                <picture>
+                <source
+                     srcset="./build/img/servicio_03.avif" 
+                     type="image/avif">
+                <source
+                     srcset="./build/img/servicio_03.webp" 
+                     type="image/webp">
+                <source
+                     srcset="./build/img/servicio_03.jpg" 
+                     type="image/jpeg">
+                <img loading="lazy" decoding="async" src="./build/img/servicio_03.jpg" lazyalt="imagen"  alt="Imagen Servicio" title="Imagen Servicio" class="card__imagen">
+                </picture>
+
+                <div class="card__contenido">
+                    <h2 class="card__heading">Visita Nuestra <span>tienda</span></h2>
+                    <a href="#" class="card__enlace">Leer más</a>
+                </div>
+            </div> <!-- fin .card -->
+        </div>
+    </section>
 </body>
 </html>
