--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <source
                      srcset="./build/img/slide_01.jpg" 
                      type="image/jpeg">
-                <img loading="lazy" decoding="async" src="./build/img/slide_01.jpg" lazyalt="imagen"  alt="Imagen Slide" title="Imagen Slide" clas="slider__imagen">
+                <img loading="lazy" decoding="async" src="./build/img/slide_01.jpg" lazyalt="imagen"  alt="Imagen Slide" title="Imagen Slide" class="slider__imagen">
                 </picture>
             </li>
         </ul>
@@ -198,6 +198,181 @@
                 </table>
             </div>
         </div>
-    </section>
+    </section> <!-- fin horario -->
+
+    <main class="productos contenedor seccion">
+        <h2 class="productos__heading">nuestros <span>productos</span></h2>
+
+        <div class="productos__grid">
+            <div class="producto">
+                <div class="producto__mask">
+                <picture>
+                    <source
+                    srcset="./build/img/producto_01.avif" 
+                    type="image/avif">
+                    <source
+                    srcset="./build/img/producto_01.webp" 
+                    type="image/webp">
+                    <source
+                    srcset="./build/img/producto_01.jpg" 
+                    type="image/jpeg">
+                    <img loading="lazy" decoding="async" src="./build/img/producto_01.jpg" lazyalt="imagen"  alt="Imagen Producto" title="Imagen Producto" class="producto__imagen">
+                </picture>
+            </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Producto 1</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eius possimus voluptatum dolore quam soluta,?</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div> <!-- fin .producto -->
+            <div class="producto">
+                <div class="producto__mask">
+                <picture>
+                    <source
+                    srcset="./build/img/producto_02.avif" 
+                    type="image/avif">
+                    <source
+                    srcset="./build/img/producto_02.webp" 
+                    type="image/webp">
+                    <source
+                    srcset="./build/img/producto_02.jpg" 
+                    type="image/jpeg">
+                    <img loading="lazy" decoding="async" src="./build/img/producto_02.jpg" lazyalt="imagen"  alt="Imagen Producto" title="Imagen Producto" class="producto__imagen">
+                </picture>
+            </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Producto 2</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eius possimus voluptatum dolore quam soluta,?</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div> <!-- fin .producto -->
+            <div class="producto">
+                <div class="producto__mask">
+                <picture>
+                    <source
+                    srcset="./build/img/producto_03.avif" 
+                    type="image/avif">
+                    <source
+                    srcset="./build/img/producto_03.webp" 
+                    type="image/webp">
+                    <source
+                    srcset="./build/img/producto_03.jpg" 
+                    type="image/jpeg">
+                    <img loading="lazy" decoding="async" src="./build/img/producto_03.jpg" lazyalt="imagen"  alt="Imagen Producto" title="Imagen Producto" class="producto__imagen">
+                </picture>
+            </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Producto 3</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eius possimus voluptatum dolore quam soluta,?</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div> <!-- fin .producto -->
+            <div class="producto">
+                <div class="producto__mask">
+                <picture>
+                    <source
+                    srcset="./build/img/producto_04.avif" 
+                    type="image/avif">
+                    <source
+                    srcset="./build/img/producto_04.webp" 
+                    type="image/webp">
+                    <source
+                    srcset="./build/img/producto_04.jpg" 
+                    type="image/jpeg">
+                    <img loading="lazy" decoding="async" src="./build/img/producto_04.jpg" lazyalt="imagen"  alt="Imagen Producto" title="Imagen Producto" class="producto__imagen">
+                </picture>
+            </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Producto 4</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eius possimus voluptatum dolore quam soluta,?</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div> <!-- fin .producto -->
+            <div class="producto">
+                <div class="producto__mask">
+                <picture>
+                    <source
+                    srcset="./build/img/producto_05.avif" 
+                    type="image/avif">
+                    <source
+                    srcset="./build/img/producto_05.webp" 
+                    type="image/webp">
+                    <source
+                    srcset="./build/img/producto_05.jpg" 
+                    type="image/jpeg">
+                    <img loading="lazy" decoding="async" src="./build/img/producto_05.jpg" lazyalt="imagen"  alt="Imagen Producto" title="Imagen Producto" class="producto__imagen">
+                </picture>
+            </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Producto 5</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eius possimus voluptatum dolore quam soluta,?</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div> <!-- fin .producto -->
+            <div class="producto">
+                <div class="producto__mask">
+                <picture>
+                    <source
+                    srcset="./build/img/producto_06.avif" 
+                    type="image/avif">
+                    <source
+                    srcset="./build/img/producto_06.webp" 
+                    type="image/webp">
+                    <source
+                    srcset="./build/img/producto_06.jpg" 
+                    type="image/jpeg">
+                    <img loading="lazy" decoding="async" src="./build/img/producto_06.jpg" lazyalt="imagen"  alt="Imagen Producto" title="Imagen Producto" class="producto__imagen">
+                </picture>
+            </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Producto 6</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eius possimus voluptatum dolore quam soluta,?</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div> <!-- fin .producto -->
+            <div class="producto">
+                <div class="producto__mask">
+                <picture>
+                    <source
+                    srcset="./build/img/producto_07.avif" 
+                    type="image/avif">
+                    <source
+                    srcset="./build/img/producto_07.webp" 
+                    type="image/webp">
+                    <source
+                    srcset="./build/img/producto_07.jpg" 
+                    type="image/jpeg">
+                    <img loading="lazy" decoding="async" src="./build/img/producto_07.jpg" lazyalt="imagen"  alt="Imagen Producto" title="Imagen Producto" class="producto__imagen">
+                </picture>
+            </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Producto 7</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eius possimus voluptatum dolore quam soluta,?</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div> <!-- fin .producto -->
+            <div class="producto">
+                <div class="producto__mask">
+                <picture>
+                    <source
+                    srcset="./build/img/producto_08.avif" 
+                    type="image/avif">
+                    <source
+                    srcset="./build/img/producto_08.webp" 
+                    type="image/webp">
+                    <source
+                    srcset="./build/img/producto_08.jpg" 
+                    type="image/jpeg">
+                    <img loading="lazy" decoding="async" src="./build/img/producto_08.jpg" lazyalt="imagen"  alt="Imagen Producto" title="Imagen Producto" class="producto__imagen">
+                </picture>
+            </div>
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Producto 8</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eius possimus voluptatum dolore quam soluta,?</p>
+                    <p class="producto__precio">$25</p>
+                </div>
+            </div> <!-- fin .producto -->
+        </div>
+    </main>
 </body>
 </html>
