Se agrega contenido y estilos a seccion de cita

--- a/index.html
+++ b/index.html
@@ -373,6 +373,11 @@
                 </div>
             </div> <!-- fin .producto -->
         </div>
-    </main>
+    </main><!-- Fin productos -->
+    <section class="cita">
+        <h2 class="cita__heading">Realiza una cita</h2>
+        <p class="cita__texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti tempore officia aliquid quia placeat repellat laborum recusandae saepe autem ab, debitis explicabo exercitationem cumque maxime, doloremque iste doloribus labore officiis!</p>
+        <a href="#" class="cita__enlace">Leer más</a>
+    </section>
 </body>
 </html>
