Se agrega contenido y estilos a seccion footer

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <tr class="tabla__trow">
                             <td class="tabla__td">Sábado</td>
                             <td class="tabla__td">09:00</td>
-                            <td class="tabla__td">19:00</td>
+                            <td class="tabla__td">14:00</td>
                         </tr>
 
                         <tr class="tabla__trow">
@@ -378,6 +378,48 @@
         <h2 class="cita__heading">Realiza una cita</h2>
         <p class="cita__texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti tempore officia aliquid quia placeat repellat laborum recusandae saepe autem ab, debitis explicabo exercitationem cumque maxime, doloremque iste doloribus labore officiis!</p>
         <a href="#" class="cita__enlace">Leer más</a>
-    </section>
+    </section><!-- fin .cita -->
+
+    <footer class="footer">
+        <div class="footer__grid contenedor">
+            <div class="footer__box">
+                <h3 class="footer__heading">Nosotros</h3>
+                <p class="footer__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, voluptatum odit fuga exped.</p>
+            </div>
+
+            <div class="footer__box">
+                <h3 class="footer__heading">Horario</h3>
+                <p class="footer__texto">Lun-Vie: 9:00 - 19:00</p>
+                <p class="footer__texto">Sábado: 9:00 - 14:00</p>
+                <p class="footer__texto">Domingo: Cerrado</p>
+            </div>
+
+            <div class="footer__box">
+                <h3 class="footer__heading">Contacto</h3>
+                <p class="footer__texto">Av. Revolución 1819</p>
+                <nav class="sociales">
+                    <a class="sociales__enlace" href="hhtps://facebook.com">
+                        <span class="sociales__accesible">Facebook </span>
+                    </a>
+                    <a class="sociales__enlace" href="hhtps://twitter.com">
+                        <span class="sociales__accesible">Twitter </span>
+                    </a>
+                    <a class="sociales__enlace" href="hhtps://instagram.com">
+                        <span class="sociales__accesible"> Instagram</span>
+                    </a>
+                    <a class="sociales__enlace" href="hhtps://pinterest.com">
+                        <span class="sociales__accesible">Pinterest </span>
+                    </a>
+                    <a class="sociales__enlace" href="hhtps://tiktok.com">
+                        <span class="sociales__accesible">Tiktok </span>
+                    </a>
+                    <a class="sociales__enlace" href="hhtps://youtube.com">
+                        <span class="sociales__accesible">YouTube </span>
+                    </a>
+                </nav>
+            </div>
+        </div>
+        <p class="footer__copyright">Carolina Spa & Salon®. Todos los derechos reservados &copy; 2023.</p>
+    </footer>
 </body>
 </html>
