--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italianno&family=Lato:wght@400;700;900&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./build/css/app.css">
 </head>
 <body>
@@ -51,8 +52,8 @@
         </div>
     </div>
 
-    <section class="slider">
-        <ul class="slider__contendor">
+    <section class="slider contenedor">
+        <ul class="slider__contenedor">
             <li class="slider__slide">
                 <picture>
                 <source
@@ -65,6 +66,36 @@
                      srcset="./build/img/slide_01.jpg" 
                      type="image/jpeg">
                 <img loading="lazy" decoding="async" src="./build/img/slide_01.jpg" lazyalt="imagen"  alt="Imagen Slide" title="Imagen Slide" class="slider__imagen">
+                </picture>
+            </li>
+
+            <li class="slider__slide">
+                <picture>
+                <source
+                     srcset="./build/img/slide_02.avif" 
+                     type="image/avif">
+                <source
+                     srcset="./build/img/slide_02.webp" 
+                     type="image/webp">
+                <source
+                     srcset="./build/img/slide_02.jpg" 
+                     type="image/jpeg">
+                <img loading="lazy" decoding="async" src="./build/img/slide_02.jpg" lazyalt="imagen"  alt="Imagen Slide" title="Imagen Slide" class="slider__imagen">
+                </picture>
+            </li>
+
+            <li class="slider__slide">
+                <picture>
+                <source
+                     srcset="./build/img/slide_03.avif" 
+                     type="image/avif">
+                <source
+                     srcset="./build/img/slide_03.webp" 
+                     type="image/webp">
+                <source
+                     srcset="./build/img/slide_03.jpg" 
+                     type="image/jpeg">
+                <img loading="lazy" decoding="async" src="./build/img/slide_03.jpg" lazyalt="imagen"  alt="Imagen Slide" title="Imagen Slide" class="slider__imagen">
                 </picture>
             </li>
         </ul>
@@ -421,5 +452,9 @@
         </div>
         <p class="footer__copyright">Carolina Spa & Salon®. Todos los derechos reservados &copy; 2023.</p>
     </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="./js/app.js" type="text/javascript"></script>
 </body>
 </html>
